# django_project

./: .env.examples  .gitignore  pyproject.toml  requirements.txt
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  mistral.py  models.py  signals.py  telegram_bot.py  views.py
core/migrations/: 0001_initial.py  0002_master_phone.py  0003_alter_master_options_master_email_and_more.py  0004_alter_master_options_order.py  0005_remove_order_master_delete_master_delete_order.py  0006_initial.py  0007_alter_order_date_created_alter_order_date_updated_and_more.py  0008_alter_order_status.py  0009_alter_order_status.py  0010_alter_review_rating.py  0011_alter_master_options_alter_order_options_and_more.py
core/static/js/: thanks.js
core/templates/: 403.html  base.html  landing.html  nav_bar_include.html  order_card_include.html  order_detail.html  order_form.html  order_form_class.html  orders_detail.html  orders_list.html  review_form.html  thanks.html
core/templates/users/: change_password.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile_detail.html  profile_update_form.html  register.html
static/css/: main.css
static/js/: main.js  order_form.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
